Исправление разметки для ссылок и классов страниц index и photo

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
         <div class="wrapper">
           <div class="page-header__logo logo">
             <a href="#">
-              <svg class="logo__icon" width="17" height="17">
+              <svg class="logo__icon" width="60" height="45">
                 <use xlink:href="#icon-logo" x="0" y="0" />
               </svg>PINK
             </a>
@@ -32,7 +32,7 @@
           </button>
           <nav class="page-header__navigation main-nav">
             <ul class="main-nav__list">
-              <li class="main-nav__item">
+              <li class="main-nav__item main-nav__active">
                 <a class="main-nav__link">Главная</a>
               </li>
               <li class="main-nav__item">
@@ -185,10 +185,6 @@
       </section> <!--page-contacts-->
 
     </main>
-
-    <footer class="page-footer">
-
-    </footer>
 
   </body>
 </html>
