--- a/source/photo.html
+++ b/source/photo.html
@@ -25,7 +25,7 @@
       <div class="page-header__top">
         <div class="wrapper">
           <div class="page-header__logo logo">
-            <a href="#">
+            <a href="index.html">
               <svg class="logo__icon" width="60" height="45">
                 <use xlink:href="#icon-logo" x="0" y="0" />
               </svg>PINK
@@ -39,7 +39,7 @@
               <li class="main-nav__item">
                 <a class="main-nav__link" href="index.html">Главная</a>
               </li>
-              <li class="main-nav__item">
+              <li class="main-nav__item main-nav__active">
                 <a class="main-nav__link">Фотографии</a>
               </li>
               <li class="main-nav__item">
@@ -237,7 +237,7 @@
     <footer class="page-footer">
       <div class="wrapper">
         <div class="page-footer__logo logo">
-          <a href="#">
+          <a href="index.html">
             <svg class="logo__icon" width="60" height="45">
               <use xlink:href="#icon-logo" x="0" y="0" />
             </svg>PINK
