--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
     <header class="page-header">
 
         <div class="page-header__top">
-          <div class="wrapper">
+          <div class="page-header__wrapper">
             <div class="page-header__logo logo">
               <a href="index.html">
                 <svg class="logo__icon" width="60" height="45">
@@ -31,8 +31,8 @@
                 </svg>PINK
               </a>
             </div>
-            <button class="page-header__hamburger icon-hamburger">
-              <span class="visually-hidden js-hamburger__text">Открыть меню</span>
+            <button class="page-header__hamburger page-header__hamburger--icon" type="button">
+              <span class="visually-hidden">Открыть меню</span>
             </button>
             <nav class="page-header__navigation main-nav">
               <ul class="main-nav__list">
@@ -53,8 +53,8 @@
           </div> <!-- wrapper -->
         </div> <!-- page-header__top -->
 
-        <div classs="page-header__intro intro">
-          <div class="wrapper">
+        <div class="page-header__intro intro">
+          <div class="intro__wrapper">
             <h1 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
           </div> <!-- wrapper -->
         </div> <!-- page-header__intro -->
@@ -65,87 +65,88 @@
 
       <section class="page-content__contest contest">
 
-        <div class="wrapper contest__header">
+        <div class="contest__wrapper contest__header">
           <h2 class="page-content__title contest__title">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
         </div> <!-- contest__header -->
 
-        <form class="contest__form" metod="get" action="https://echo.htmlacademy.ru">
-          <fieldset class="contest__fieldset contest__name">
-            <legend class="visually-hidden contest__legend">Ваше ФИО:</legend>
-            <div class="wrapper">
-              <label class="contest__label" for="first-name-field">Фамилия:</label>
-              <input class="contest__field" type="text" id="first-name-field" name="first-name" placeholder="Укажите фамилию *" required>
-              <label class="contest__label" for="last-name-field"">Имя:</label>
-              <input class="contest__field" type="text" id="last-name-field" name="last-name" placeholder="Введите ваше имя *" required>
-              <label class="contest__label" for="sur-name-field"">Отчество:</label>
-              <input class="contest__field" type="text" id="sur-name-field" name="sur-name" placeholder="Ну и отчество тоже">
+        <form class="contest__form form" method="get" action="https://echo.htmlacademy.ru">
+          <fieldset class="contest__contestant">
+            <legend class="visually-hidden">Ваше ФИО:</legend>
+            <div class="contest__wrapper">
+              <label class="form__label" for="first-name-field">Фамилия:</label>
+              <input class="form__text-field" type="text" id="first-name-field" name="first-name" placeholder="Укажите фамилию *" required>
+              <label class="form__label" for="last-name-field">Имя:</label>
+              <input class="form__text-field" type="text" id="last-name-field" name="last-name" placeholder="Введите ваше имя *" required>
+              <label class="form__label" for="sur-name-field">Отчество:</label>
+              <input class="form__text-field" type="text" id="sur-name-field" name="sur-name" placeholder="Ну и отчество тоже">
             </div>
           </fieldset>
-          <fieldset class="contest__fieldset contest__achivments achivments">
-            <div class="wrapper">
-              <legend class="contest__legend">Ваши безбашинные достижения в путешевствии</legend>
+          <fieldset class="contest__achievement achievement">
+            <legend class="achievement__legend">Ваши безбашинные достижения в путешествии</legend>
+            <div class="contest__wrapper">
               <ul>
-                <li class="achivments__option">
-                  <input class="visually-hidden contest__field achivments__checkbox" type="checkbox" name="achivments-item-field-1" id="achivments__item-1" checked>
-                  <label for="achivments-item-field-1">Сделал селфи с акулой</label>
+                <li class="achievement__option">
+                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-1" id="achievement-item-field-1" checked>
+                  <label class="form__label" for="achievement-item-field-1">Сделал селфи с акулой</label>
                 </li>
-                <li class="contest__option">
-                  <input class="visually-hidden contest__field achivments__checkbox" type="checkbox" name="achivments__item-2" id="achivments-item-field-2" checked>
-                  <label for="achivments-item-field-2">Обгорел на пляже</label>
+                <li class="achievement__option">
+                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-2" id="achievement-item-field-2" checked>
+                  <label class="form__label" for="achievement-item-field-2">Обгорел на пляже</label>
                 </li>
-                <li class="contest__option">
-                  <input class="visually-hidden contest__field achivments__checkbox" type="checkbox" name="achivments__item-3" id="achivments-item-field-3">
-                  <label for="achivments-item-field-3">Видел Чака Норриса</label>
+                <li class="achievement__option">
+                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-3" id="achievement-item-field-3">
+                  <label class="form__label" for="achievement-item-field-3">Видел Чака Норриса</label>
                 </li>
-                <li class="contest__option">
-                  <input class="visually-hidden contest__field achivments__checkbox" type="checkbox" name="achivments__item-4" id="achivments-item-field-4">
-                  <label for="achivments-item-field-4">Накупил сувениров</label>
+                <li class="achievement__option">
+                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-4" id="achievement-item-field-4">
+                  <label class="form__label" for="achievement-item-field-4">Накупил сувениров</label>
                 </li>
-                <li class="contest__option">
-                  <input class="visually-hidden contest__field achivments__checkbox" type="checkbox" name="achivments__item-5" id="achivments-item-field-5" checked>
-                  <label for="achivments-item-field-6" >Удержал башню</label>
-                <li class="contest__option">
-                  <input class="visually-hidden contest__field achivments__checkbox" type="checkbox" name="achivments__item-6" id="achivments-item-field-6">
-                  <label for="achivments-item-field-6">Разгромил отель</label>
+                <li class="achievement__option">
+                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-5" id="achievement-item-field-5" checked>
+                  <label class="form__label" for="achievement-item-field-5" >Удержал башню</label>
+                <li class="achievement__option">
+                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-6" id="achievement-item-field-6">
+                  <label class="form__label" for="achievement-item-field-6">Разгромил отель</label>
                 </li>
               </ul>
             </div>
           </fieldset>
-          <fieldset class="contest__fieldset contest__contact">
-            <div class="wrapper">
-              <label class="contest__label" for="phone-number-field">Номер телефона</label>
-              <input class="contest__field" type="tel" name="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}" placeholder="Номер пожалуйста" id="phone-number-field">
-              <label class="contest__label" for="email-field">Адрес почты</label>
-              <input class="contest__field" type="email" id="email-field" name="email" placeholder="Введите почту *" required>
+          <fieldset class="contest__contact contact-form">
+            <legend class="visually-hidden">Ваше ФИО:</legend>
+            <div class="contest__wrapper">
+              <label class="form__text-field" for="phone-number-field">Номер телефона</label>
+              <input class="form__checkbox" type="tel" name="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}" placeholder="Номер пожалуйста" id="phone-number-field">
+              <label class="form__label" for="email-field">Адрес почты</label>
+              <input class="form__text-field" type="email" id="email-field" name="email" placeholder="Введите почту *" required>
             </div>
           </fieldset>
-          <fieldset class="contest__fieldset contest__apps apps-fields">
-            <div class="wrapper">
-              <legend class="contest__legend">С каким приложением путешевствовали?</legend>
+          <fieldset class="contest__apps apps-fields">
+            <legend class="apps-fields__legend">С каким приложением путешевствовали?</legend>
+            <div class="contest__wrapper">
               <ul>
                 <li class="apps-fields__option">
-                  <input class="visually-hidden contest__field apps-fields__checkbox" type="radio" name="apps" id="apps-fields__item-1" checked>
-                  <label for="apps-item-field-1">Pink для iOS</label>
+                  <input class="visually-hidden form__radio" type="radio" name="apps" id="apps-item-field-1" checked>
+                  <label class="form__label" for="apps-item-field-1">Pink для iOS</label>
                 </li>
                 <li class="apps-fields__option">
-                  <input class="visually-hidden contest__field apps-fields__checkbox" type="radio" name="apps" id="apps-fields__item-2" checked>
-                  <label for="apps-item-field-2">Pink для Android</label>
+                  <input class="visually-hidden form__radio" type="radio" name="apps" id="apps-item-field-2" checked>
+                  <label class="form__label" for="apps-item-field-2">Pink для Android</label>
                 </li>
                 <li class="apps-fields__option">
-                  <input class="visually-hidden contest__field apps-fields__checkbox" type="radio" name="apps" id="apps-fields__item-2" checked>
-                  <label for="apps-item-field-2">Windows Phone</label>
+                  <input class="visually-hidden form__radio" type="radio" name="apps" id="apps-item-field-3" checked>
+                  <label class="form__label" for="apps-item-field-3">Windows Phone</label>
                 </li>
               </ul>
             </div>
           </fieldset>
-          <fieldset class="contest__fieldset contest__comment">
-            <div class="wrapper">
-              <legend class="contest__legend">Опишите свои эмоции</legend>
-              <textarea class="contest__field contest__textarea" name="comment" rows="6" placeholder="Можно прям в красках, не стесняйтесь в выражениях" id="comment-field"> </textarea>
+          <fieldset class="contest__comment comments">
+            <legend class="comments__legend">Опишите свои эмоции</legend>
+            <div class="contest__wrapper">
+              <textarea class="form__textarea" name="comment" rows="6" placeholder="Можно прям в красках, не стесняйтесь в выражениях" id="comment-field"> </textarea>
             </div>
           </fieldset>
-          <div class="wrapper">
-            <button class="button" type="submit">Отправить форму</button>
+          <div class="contest__wrapper">
+            <button class="button form__submit" type="submit">Отправить форму</button>
             <p class=""><span class="">*</span> — обязательные поля</p>
           </div>
         </form>
@@ -154,18 +155,18 @@
 
     </main>
 
-    <footer class="page-footer">
-      <div class="wrapper">
-        <div class="page-footer__logo logo">
+    <footer class="page-footer footer">
+      <div class="footer__wrapper">
+        <div class="footer__logo logo">
           <a href="index.html">
             <svg class="logo__icon" width="60" height="45">
               <use xlink:href="#icon-logo" x="0" y="0" />
             </svg>PINK
           </a>
         </div>
-        <ul class="page-footer__social social">
+        <ul class="footer__social social">
           <li>
-            <a class="button social__button social__twitter" href="#">
+            <a class="social-button social-button--twitter" href="#">
               <svg class="social__icon" width="18" height="14">
                 <use xlink:href="#icon-twitter" x="0" y="0" />
               </svg>
@@ -173,7 +174,7 @@
             </a>
           </li>
           <li>
-            <a class="button social__button-button social__facebook" href="#">
+            <a class="social-button social-button--facebook" href="#">
               <svg class="social__icon" width="9" height="18">
                 <use xlink:href="#icon-facebook" x="0" y="0" />
               </svg>
@@ -181,7 +182,7 @@
             </a>
           </li>
           <li>
-            <a class="button social__button-button social__youtube" href="#">
+            <a class="social-button social-button--youtube" href="#">
               <svg class="social__icon" width="15" height="13">
                 <use xlink:href="#icon-youtube" x="0" y="0" />
               </svg>
@@ -189,7 +190,7 @@
             </a>
           </li>
         </ul>
-        <p class="page-footer__developper">
+        <p class="footer__developper">
           Разработано
           <a href="https://htmlacademy.ru/intensive/htmlcss">
             <svg class="social__icon" width="15" height="13">
